--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "license": "MIT",
   "private": true,
   "devDependencies": {
+    "axios": "^0.18.0",
     "babel-core": "^6.26.3",
     "babel-loader": "^7.1.4",
     "babel-plugin-transform-class-properties": "^6.24.1",
@@ -15,28 +16,29 @@
     "babel-preset-react": "^6.24.1",
     "babel-runtime": "^6.26.0",
     "css-loader": "^0.28.11",
+    "domain-task": "^3.0.3",
     "file-loader": "^1.1.11",
+    "history": "^4.7.2",
     "mini-css-extract-plugin": "^0.4.0",
     "node-sass": "^4.9.0",
-    "react-router-dom": "^4.3.1",
-    "redux": "^4.0.0",
-    "sass-loader": "^7.0.3",
-    "webpack": "^4.12.1",
-    "webpack-cli": "^3.0.8",
-    "axios": "^0.18.0",
-    "domain-task": "^3.0.3",
-    "history": "^4.7.2",
     "prop-types": "^15.6.2",
     "react": "16.0.0",
     "react-dom": "16.0.0",
     "react-redux": "^5.0.7",
+    "react-router-dom": "^4.3.1",
     "react-router-redux": "4.0.8",
-    "redux-thunk": "2.2.0"
+    "redux": "^4.0.0",
+    "redux-thunk": "2.2.0",
+    "sass-loader": "^7.0.3",
+    "webpack": "^4.12.1",
+    "webpack-cli": "^3.0.8",
+    "webpack-dev-server": "^3.1.4"
   },
   "scripts": {
     "build": "webpack --mode production",
     "start-wp": "webpack --mode development",
     "start-bs": "browser-sync start --config bs-config.js",
-    "start": "concurrently --kill-others \"yarn start-wp\" \"yarn start-bs\""
+    "start": "concurrently --kill-others \"yarn start-wp\" \"yarn start-bs\"",
+    "start:dev": "webpack-dev-server --mode development"
   }
 }
